[gd_scene load_steps=13 format=3 uid="uid://bxppgon8f1dap"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_yefp3"]
[ext_resource type="Texture2D" uid="uid://b3erm5iexxfyo" path="res://Sprites/head (player).png" id="2_tchh1"]
[ext_resource type="Texture2D" uid="uid://cxccxkemoxe2s" path="res://Sprites/leg (player).png" id="3_043nv"]
[ext_resource type="Texture2D" uid="uid://mu0jvuoa15j0" path="res://Sprites/body (player).png" id="4_pn8sg"]
[ext_resource type="Texture2D" uid="uid://dyx0i77thgdox" path="res://Sprites/dialogue box.png" id="5_5aaqu"]
[ext_resource type="Theme" uid="uid://dayy82ieyoow2" path="res://Theme/theme1.tres" id="6_tj40f"]
[ext_resource type="AudioStream" uid="uid://ceabjnhaesvym" path="res://Sound Effects/zapsplat_foley_footstep_single_wellington_boots_rubber_adults_walking_heavy_on_gravel_stones_004_101980.mp3" id="7_bwi1m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8h6r"]
size = Vector2(128, 124)

[sub_resource type="Animation" id="Animation_b012q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leg1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5.6, 5.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leg1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("leg2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.4, 5.4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("leg2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xyalr"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leg1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5.6, 5.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leg1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("leg2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.4, 5.4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("leg2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ipne7"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leg1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5.6, 5.4), Vector2(-8, 4), Vector2(-5.6, 5.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leg1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.460285, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("leg2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7.4, 5.4), Vector2(10, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("leg2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.986398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmkij"]
_data = {
"RESET": SubResource("Animation_b012q"),
"idle": SubResource("Animation_xyalr"),
"run": SubResource("Animation_ipne7")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_yefp3")

[node name="head" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -37)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_tchh1")

[node name="leg1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-5.6, 5.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_043nv")

[node name="leg2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(7.4, 5.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_043nv")

[node name="body" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0.8, -13.6)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_pn8sg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_g8h6r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bmkij")
}

[node name="dialogue box" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(2, -76)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_5aaqu")

[node name="Label" type="RichTextLabel" parent="dialogue box"]
z_index = 2
offset_left = -47.0
offset_top = -50.0
offset_right = 45.0
offset_bottom = 9.0
theme = ExtResource("6_tj40f")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "here we
go again"
scroll_active = false

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_bwi1m")
volume_db = -16.986

[connection signal="timeout" from="DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
